# service_hub

./: .gitignore  README.ko.md  README.md  TODO  add_service_dialog.py  css.py  event_bus.py  main.py  requirements.txt  service_hubd.py  service_menu_dialog.py  service_profile.py  services.ini  utils.py
service-hub_1.0.0_amd/DEBIAN/: control  postrm
service-hub_1.0.0_amd/etc/systemd/system/: service_hubd.service
service-hub_1.0.0_amd/usr/lib/service-hub/: service_hubd.py
service-hub_1.0.0_arm/DEBIAN/: control  postinst
service-hub_gui/: TODO  css.py  main.py  main.spec  service_menu_dialog.py  service_profile.py  system_tray.py
service-hub_gui/ui/: system_tray.py
service_hub_daemon/: service_hubd.py
service_hub_deamon/: service_hubd.py
service_hub_gui/: service_hub_gui.py  service_hub_gui.spec
service_hub_gui/ui/: service_profile.py  system_tray.py
service_hub_gui/ui/dialogs/: add_service_dialog.py  service_menu_dialog.py
service_hub_icp/: pyproject.toml
service_hub_icp/service_hub_icp/: utils.py
service_hub_icp/service_hub_icp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
service_hub_ipc/: pyproject.toml
service_hub_ipc/service_hub_icp.egg-info/: SOURCES.txt  top_level.txt
service_hub_ipc/service_hub_ipc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
